<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500"

        android:gravity="center"
        android:text="@string/update_details"
        android:textColor="#FFF"

        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"

        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/newname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="Name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"

        android:text="@string/position_appearing_for"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/newposition"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="Position"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"

        android:text="@string/department"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/newdept"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:hint="Enter the Department" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"

        android:text="Image url"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/newimg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:hint="Image Url"
        android:gravity="center" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:id="@+id/save"
        android:text="SAVE"
        android:textSize="24sp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:id="@+id/back"
        android:text="BACK"
        android:textSize="24sp"

        />


</LinearLayout>