<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="377dp"
        android:layout_height="262dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"


        >


        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img1"
            android:layout_marginStart="126dp"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/img1"

            android:text="Delete"
            android:textSize="25sp" />

        <Button
            android:id="@+id/edit"
            android:layout_width="115dp"
            android:layout_height="52dp"
            android:layout_below="@id/img1"
            android:layout_marginStart="-53dp"
            android:layout_marginTop="23dp"
            android:layout_toEndOf="@+id/img1"
            android:text="Edit"
            android:textSize="25sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/depttxt"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/positiontxt"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/department"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/nametxt"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/student_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/positiontxt"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nametxt"
            android:layout_marginStart="6dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/position_appearing_for"
            android:textSize="25sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>